sourabh's full stack

--- a/Class-1(Intro to HTML)/Index.html
+++ b/Class-1(Intro to HTML)/Index.html
@@ -33,7 +33,7 @@
         manned, the beacon still flashed dutifully each night, a relic of a bygone era offering quiet guidance to
         distant ships. To the few who wandered near, it felt like a guardian of forgotten stories, whispering tales of
         shipwrecks, sailors, and secrets lost to the sea.</p>
-    <img src="../test/LIght house.png"alt="Light house">
+    <img src="../test/LIght house.png"alt="Light hous">
         <!--to access the image from the other folder I have to use double forward lslash and the folder name and again 
         forward slash and the image name (../folder name/image name)-->
 
@@ -41,7 +41,7 @@
     <!--Hyper links: these are the tags where they direct us to the diffent page-->
     <a href="https://info.cern.ch/" target="_blank">Fist website ever created(and was created by"Tim Berners-Lee at CERN")</a>
     <!-- the href is the reference of the page that the anchor tab will direct us to-->
-    <!-- I want to open this link on new tab the use another attribute just as href it is "target=_blank" attribute, which allows me to open the link on new tab  -->
+    <!-- I want to open this link on new tab then use another attribute just as href it is "target=_blank" attribute, which allows me to open the link on new tab  -->
 </body>
 
 </html>
