--- a/Class-2 HTML Lists, tables and Forms/Table.html
+++ b/Class-2 HTML Lists, tables and Forms/Table.html
@@ -15,6 +15,7 @@
             <th>Name</th>
             <th>Maths</th>
             <th colspan="2">Physics</th>
+            <th>Science</th>
             
         </thead>
         <tbody>
@@ -38,6 +39,7 @@
                 <td>100</td>
                 <td>100</td>
                 <td>99</td>
+                <td>750</td>
             </tr>
         </tbody>
     </table>
