--- a/Class-4/display.html
+++ b/Class-4/display.html
@@ -1,34 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-        h1{
-            display: inline;/*here I have changed the property of default disply block to the inline*/
-            border: 4px solid red;
-        }
-        span{
-            display: block ;
-            /*here I have changed the property of default disply inline to the block*/
-            border: 4px solid rebeccapurple;
-        }
-        h2{
-            display: inline-block;
-            border: 4px solid rebeccapurple;
-        }
-    </style>
-</head>
-<body>
-    <!-- the heading paragraph and the div tag are the block elements they occupie the complete scree and block the space -->
-    <h1>I am heading 1</h1>
-    <h2>I am heading 2</h2>
+    <link rel="stylesheet" href="./style.css">
+  </head>
+  <body>
+    <h1>Hello</h1>
 
-    <!-- the below two tags are the inline elements they only occupie the space required  -->
-    <span>I am span</span>
-    <a href="https://www.google.com/">go to google</a>
+    <h2>Hello Again!</h2>
 
-    <!-- But I have the capacity to change the default properties -->
-</body>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, ut!</p>
+
+    <a href="https://www.google.com/">Go to google</a>
+    <span>Hello</span>
+  </body>
 </html>
