--- a/Class-5/Flex.html
+++ b/Class-5/Flex.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
     <style>
-        .container {
-            height: 500px;
-            background-color: gray;
-            display: flex;
-            /* The default direction of the flex box is x-axis */
-            flex-direction:column-reverse;
-        }
+      .container {
+        background-color:darkgray;
+        height: 400px;
+        width: 100%;
 
-        .item {
-            width: 100px;
-            height: 100px;
-            margin: 10px;
-            background-color: coral;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+      }
 
-        }
+      .box {
+        height: 100px;
+        width: 100px;
+        background-color:beige;
+        margin: 15px;
+      }
     </style>
-</head>
-
-<body>
+  </head>
+  <body>
     <div class="container">
-        <div class="item box1">Box1</div>
-        <div class="item box2">Box2</div>
-        <div class="item box3">Box3</div>
-        <div class="item box4">Box4</div>
+      <div class="box">Box 1</div>
+      <!-- <div class="box">Box 2</div>
+      <div class="box">Box 3</div>
+      <div class="box">Box 4</div> -->
     </div>
-</body>
-
+  </body>
 </html>
