--- a/JavaScript-1 Introduction to JavaScript/test.html
+++ b/JavaScript-1 Introduction to JavaScript/test.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./index.js"></script>
+    <script src="./Arrays.js"></script>
 </head>
+
 <body>
     <h1>First JS code</h1>
 </body>
+
 </html>
