--- a/1Completeportifolio/complete_porifilio.html
+++ b/1Completeportifolio/complete_porifilio.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <div  class="container">
+        <div class="container">
             <nav class="flex item-center justify-between">
                 <div class="left flex justify-right">
                     <div class="logo">
@@ -30,34 +30,35 @@
             <div class="left justify-center">
                 <img src="./assets/number1.jpg" alt="Profile">
             </div>
-            <div>
-                <h6>Mrinal Bhattacharya</h6>
+            <div class="right">
+                <h2>Bonam Rithwik Sai Sourabh</h2>
                 <h1>I'm a Frontend<br> <span>Developer</span></h1>
                 <p>Description</p>
                 <div>
-                    <button>DOWNLOAD RESUME</button>
+                    <button class="btn">DOWNLOAD RESUME</button>
                 </div>
             </div>
         </div>
     </header>
 
-     <section>
-        <div>
-            <div>
-                <img src="./assets/Profilepic.jpg" height="400px" alt="profile pic">
+    <section class="about">
+        <div class="container flex item-center">
+            <div class="left">
+                <img src="./assets/Profilepic.jpg" width="400px" alt="profile pic">
             </div>
-            <div>
+            <div class="right">
                 <h1>About <span>Me</span></h1>
-                <h3>Hello! I'm Mrinal Bhattacharya</h3>
+                <h3>Hello! I'm Bonam Rithwik Sai Sourabh</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque adipisci distinctio obcaecati aliquid,
                     quia tempora quis optio repudiandae officia earum?
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                 </p>
-                <div>
-                    <a href="#"><img src="./assets/linkedIn.png" width="40px"></a>
-                    <a href="#"><img src="./assets/github logo.png" width="40px"></a>
-                    <a href="#"><img src="./assets/leet logo.png" width="40px"></a>
-                    <a href="#"><img src="./assets/twitter logo.png" width="40px"></a>
+                <div class="socials flex">
+                    <a href="#"><img src="./assets/LinkedIn.png" width="40px"></a>
+                    <a href="#"><img src="./assets/gitHub.png" width="40px"></a>
+                    <a href="#"><img src="./assets/LeetCode.png" width="40px"></a>
+                    <a href="#"><img src="./assets/TwitterX.png" width="40px"></a>
+                    <a href="#"><img src="./assets/insta.png" width="40px"></a>
                 </div>
             </div>
         </div>
@@ -74,7 +75,7 @@
                     <h2>Calculator</h2>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla, debitis?</p>
                 </div>
-                <div >
+                <div>
                     <img src="./assets/cart png.png">
                     <h2>Shopping Cart</h2>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla, debitis?</p>
