--- a/1Completeportifolio/complete_porifilio.html
+++ b/1Completeportifolio/complete_porifilio.html
@@ -54,11 +54,11 @@
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                 </p>
                 <div class="socials flex">
-                    <a href="#"><img src="./assets/LinkedIn.png" width="40px"></a>
-                    <a href="#"><img src="./assets/gitHub.png" width="40px"></a>
-                    <a href="#"><img src="./assets/LeetCode.png" width="40px"></a>
-                    <a href="#"><img src="./assets/TwitterX.png" width="40px"></a>
-                    <a href="#"><img src="./assets/insta.png" width="40px"></a>
+                    <a href="#"><img src="./assets/linked in-1.png" width="40px"></a>
+                    <a href="#"><img src="./assets/gitHub-1.png" width="40px"></a>
+                    <a href="#"><img src="./assets/LeetCode1.png" width="40px"></a>
+                    <a href="#"><img src="./assets/twitterX-1.png" width="40px"></a>
+                    <a href="#"><img src="./assets/insta-1.png" width="40px"></a>
                 </div>
             </div>
         </div>
