learnt how to add images

--- a/1Completeportifolio/complete_porifilio.html
+++ b/1Completeportifolio/complete_porifilio.html
@@ -15,7 +15,7 @@
             <nav class="flex item-center justify-between">
                 <div class="left flex justify-right">
                     <div class="logo">
-                        <img src="./assets/Logo.png" width="50px" height="50px" alt="logo">
+                        <img src="./assets/Logo.png" width="70px" height="50px" alt="logo">
                     </div>
                     <div>
                         <a href="#">Home</a>
@@ -54,34 +54,34 @@
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                 </p>
                 <div class="socials flex">
-                    <a href="#"><img src="./assets/linked in-1.png" width="40px"></a>
-                    <a href="#"><img src="./assets/gitHub-1.png" width="40px"></a>
-                    <a href="#"><img src="./assets/LeetCode1.png" width="40px"></a>
-                    <a href="#"><img src="./assets/twitterX-1.png" width="40px"></a>
-                    <a href="#"><img src="./assets/insta-1.png" width="40px"></a>
+                    <a href="#"><img src="./assets/real linkedin.png" width="40px"></a>
+                    <a href="#"><img src="./assets/real git.png" width="40px"></a>
+                    <a href="#"><img src="./assets/real leet.png" width="40px"></a>
+                    <a href="#"><img src="./assets/real x.png" width="40px"></a>
+                    <a href="#"><img src="./assets/real insta.png" width="40px"></a>
                 </div>
             </div>
         </div>
     </section>
 
 
-    <section>
-        <div>
-            <h1>My Projects</h1>
+    <section class="services">
+        <div class="container">
+            <h1 class="services-head">My <span>Projects</span></h1>
             <p>I mostly work with HTML ,CSS ,JavaScript , React and Node</p>
-            <div>
-                <div>
-                    <img src="./assets/calculator png.png">
+            <div class="card-grid">
+                <div class="card">
+                    <img src="./assets/real calculator.png" width="40" alt="Calculator img">
                     <h2>Calculator</h2>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla, debitis?</p>
                 </div>
-                <div>
-                    <img src="./assets/cart png.png">
+                <div class="card">
+                    <img src="./assets/real cart.png" width="40" alt="cart img">
                     <h2>Shopping Cart</h2>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla, debitis?</p>
                 </div>
-                <div>
-                    <img src="./assets/to do list.png">
+                <div class="card">
+                    <img src="./assets/real to do.png" width="40" alt="todo img">
                     <h2>To do List</h2>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla, debitis?</p>
                 </div>
