--- a/JavaScript-6 Introduction to DOM/1.html
+++ b/JavaScript-6 Introduction to DOM/1.html
@@ -2,46 +2,34 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF - 8" />
+    <meta name="viewport" content="width = device - width, initial - scale = 1.0" />
     <title>Document</title>
 </head>
-<style>
-    .inActive {
-        background-color: red;
-    }
 
-    .active {
-        background-color: green;
-    }
-</style>
+<body id="body-1">
+    <button id="btn-1">Say Hello</button>
 
-<body>
-    <button class="inActive">I am Inactive</button>
+
+    <script>
+        // on clicking the button append hello to the page
+        // querySelector
+        // getElementByID
+
+        let helloBtn = document.getElementById('btn-1')
+
+        // Event Listners
+
+        helloBtn.addEventListener('click', function () {
+            let helloDiv = document.createElement('div')
+            helloDiv.innerText = 'Hello'
+
+            let bodyElement = document.getElementById('body-1')
+            console.log(bodyElement)
+
+            bodyElement.appendChild(helloDiv)
+        })
+    </script>
 </body>
-
-<script>
-    let ToggleButton = document.querySelector('button')
-    console.log(ToggleButton)
-
-    // classList
-
-    console.log(ToggleButton.classList)
-
-    ToggleButton.addEventListener('click', function () {
-        if (ToggleButton.classList.contains('inActive')) {
-            ToggleButton.classList.remove('inActive')
-            ToggleButton.classList.add('active')
-            ToggleButton.innerText = 'I am Active'
-        }
-        else {
-            ToggleButton.classList.remove('active')
-            ToggleButton.classList.add('inActive')
-            ToggleButton.innerText = 'I am In Active'
-
-        }
-    })
-
-</script>
 
 </html>
